# interproc

./: Interproc.opam  Makefile  Makefile.config.model  README  README.md  boolexpr.mli  dune  dune-project  equation.ml  equation.mli  frontend.ml  frontend.mli  interproc.ml  interproc.opam  interproc.tex  interprocweb.ml  interprocweb.mli  manual.tex  option.ml  option.mli  pSpl_syn.ml  solving.ml  solving.mli  solvingPolicy.ml  solvingPolicy.mli  spl_lex.mli  spl_lex.mll  syn2equation.ml
examples/: heapsort.txt  maccarthy91.spl  numerical.spl  symmetricalstairs.spl
src/: boolexpr.ml  dune  equation.ml  equation.mli  frontend.ml  pSpl_syn.ml  solving.ml  solving.mli  solvingPolicy.ml  solvingPolicy.mli  spl_lex.mll  spl_syn.ml  spl_syn.mli  spl_yacc.mly  syn2equation.ml
