(executable
 (name interproc)
 (public_name interproc)
 (flags -w +a-4-6-7-9-27-29-32..42-44-45-48-50-60 )
 ; (ocamlopt_flags -cc "g++" -ccopt "-static")
 (modules interproc)
 (libraries menhirLib apron.polkaMPQ apron.boxMPQ apron.octMPQ camllib fixpoint interproc_lib))

; (executable
;  (name interprocjs)
;  (modes byte)
; ;  (public_name interprocjs)
;  (flags -w +a-4-6-7-9-27-29-32..42-44-45-48-50-60 )
; ;  (ocamlopt_flags -cc "g++" -ccopt "-static")
;  (modules interprocjs)
; ;  (preprocess (pps js_of_ocaml-ppx))
;  (libraries menhirLib apron.polkaMPQ apron.boxMPQ apron.octMPQ fixpoint camllib js_of_ocaml interproc_lib))

; (executable
;  (name mainweb)
;  (public_name interprocweb)
;  (flags -w +a-4-6-7-9-27-29-32..42-44-45-48-50-60 )
;  (ocamlopt_flags -cc "g++" -ccopt "-static")
;  (libraries menhirLib apron.polkaMPQ apron.boxMPQ apron.octMPQ fixpoint camllib ocamlhtml ))

